--- a/bio4j/slides/slides.html
+++ b/bio4j/slides/slides.html
@@ -12,7 +12,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 <link rel="stylesheet" href="resources/reveal.js/css/reveal.min.css">
-  <link rel="stylesheet" href="resources/reveal.js/css/theme/sky.css" id="theme">
+  <link rel="stylesheet" href="resources/reveal.js/css/theme/serif.css" id="theme">
 
 
 <!-- For syntax highlighting -->
@@ -56,9 +56,305 @@
 </section>  
 
 
-<section class="slide level2">
+<section><section id="introduction" class="titleslide slide level1"><h1>Introduction</h1></section><section class="slide level2">
 
-</section>
+<h3 id="what-is-bio4j">What is Bio4j?</h3>
+<p><strong>Bio4j</strong> is a bioinformatics <em>graph</em>-based data platform <strong>integrating</strong> the most representative <strong>open data sources</strong> around <strong>protein information</strong> available today.</p>
+<p>   </p>
+<h3 id="why-bio4j">Why Bio4j?</h3>
+<p>Bio Data <strong>+</strong> Graph Databases <strong>+</strong> The Cloud</p>
+</section><section class="slide level2">
+
+<h3 id="data-sources">Data sources</h3>
+<table>
+<col style="width: 43%" /><col style="width: 56%" /><tbody>
+<tr class="odd">
+<td style="text-align: left;"><p><img width="400" src="resources/images/data-sources.jpg"></p></td>
+<td style="text-align: left;"><ul>
+<li><em><a href="http://www.uniprot.org/help/uniprotkb">UniProt KB</a></em> (SwissProt + Trembl)</li>
+<li><em><a href="http://www.geneontology.org/">Gene Ontology</a></em> (GO)</li>
+<li><em><a href="http://www.uniprot.org/help/uniref">UniRef</a></em> (50,90,100)</li>
+<li><em><a href="http://www.ncbi.nlm.nih.gov/RefSeq/">RefSeq</a></em></li>
+<li><em><a href="http://www.ncbi.nlm.nih.gov/Taxonomy/">NCBI taxonomy</a></em></li>
+<li><em><a href="http://enzyme.expasy.org/">Expasy Enzyme DB</a></em></li>
+</ul></td>
+</tr>
+</tbody>
+</table>
+<!-- 
+<img width="500" src="resources/images/data-sources.jpg">
+
+* *[UniProt KB](http://www.uniprot.org/help/uniprotkb)* (SwissProt + Trembl)
+* *[Gene Ontology](http://www.geneontology.org/)* (GO)
+* *[UniRef](http://www.uniprot.org/help/uniref)* (50,90,100)
+* *[RefSeq](http://www.ncbi.nlm.nih.gov/RefSeq/)*
+* *[NCBI taxonomy](http://www.ncbi.nlm.nih.gov/Taxonomy/)*
+* *[Expasy Enzyme DB](http://enzyme.expasy.org/)*
+ -->
+
+</section><section class="slide level2">
+
+<h3 id="its-open">It’s open!</h3>
+<ul>
+<li>Code is under the <a href="https://www.gnu.org/licenses/agpl-3.0.html"><strong>AGPLv3</strong></a> license</li>
+<li>Only <a href="http://okfn.org/opendata/"><strong>Open Data</strong></a> is integrated</li>
+<li>Implementation &amp; release process is <a href="https://github.com/bio4j/bio4j"><strong>100% public</strong></a> and totally <strong>transparent</strong></li>
+</ul>
+</section><section class="slide level2">
+
+<h3 id="biology-databases-today">Biology &amp; Databases today</h3>
+<ul>
+<li>Highly <strong>interconnected overlapping</strong> knowledge</li>
+<li>spread over <strong>different data sources</strong></li>
+<li>mantained in the <strong>Relational database model</strong> or sometimes even just as plain <strong>CSV files</strong></li>
+</ul>
+<p> </p>
+<p>That might be OK for simple scenarios but as the <strong>amount</strong> and <strong>diversity</strong> of data grows, <strong>domain models</strong> become crazily complicated!</p>
+</section><section class="slide level2">
+
+<p><img width="800" src="resources/images/tables.jpg"></p>
+<p><em>Doesn’t look very compelling right?</em> :)</p>
+</section><section class="slide level2">
+
+<h3 id="relational-model">Relational model</h3>
+<p>With relational paradigm the double implication</p>
+<p><strong>Entity</strong> <span class="math"> ⇔ </span> <strong>Table</strong></p>
+<p>doesn’t go both ways, which implies</p>
+<ul>
+<li><strong>auxiliary tables</strong></li>
+<li><strong>artificial IDs</strong></li>
+<li>dealing with <strong>raw tables</strong><br /> (in spite of entity-relationship diagrams)</li>
+</ul>
+<p><br /> <strong>Integrating</strong> new knowledge becomes <strong>difficult</strong></p>
+</section><section class="slide level2">
+
+<h3 id="biology-neq-table">Biology <span class="math"> ≠ </span> Table</h3>
+<ul>
+<li class="fragment"><strong>Life</strong> in general and <strong>biology</strong> in particular<br /> are probably not 100% like a graph…</li>
+<li class="fragment">but one thing is sure: they <em><strong>are not a set of tables!</strong></em></li>
+</ul>
+</section><section class="slide level2">
+
+<h3 id="why-graph-databases">Why graph databases?</h3>
+<ul>
+<li>Data is stored in a way that <strong>semantically represents its own structure</strong></li>
+<li>Incorporating new data is easy <span class="math"> ⇒ </span> it’s <strong>scalable</strong></li>
+<li><strong>Vertex-centric</strong> <em>(local)</em> indices allow to overcome the supernode problem</li>
+</ul>
+</section><section class="slide level2">
+
+<!-- ### Why cloud?
+
+* data as a service
+* machine configurations
+
+ -->
+
+<!-- I'm not sure if I should talk about this: -->
+<h3 id="how-it-all-started">How it all started</h3>
+<ul>
+<li>Need for <strong>massive access</strong> to <em>Gene Ontology</em> annotations</li>
+<li><a href="http://bg7.ohnosequences.com/"><strong>BG7</strong></a> bacterial genome annotation system</li>
+<li>Need for massive direct access to <strong>protein information</strong></li>
+</ul>
+</section><section class="slide level2">
+
+<h3 id="more-and-more-data">More and more data!</h3>
+<ul>
+<li>As <em>other</em> data sources were becoming a <em>bottleneck</em> they were being added to Bio4j</li>
+<li>First it was Uniprot KB, then Uniref and <strong>we didn’t stop yet</strong></li>
+</ul>
+</section><section class="slide level2">
+
+<h3 id="numbers">Numbers</h3>
+<ul>
+<li><span class="math">10<sup>9</sup></span> edges</li>
+<li><span class="math">2 × 10<sup>8</sup></span> nodes</li>
+<li><span class="math">6 × 10<sup>8</sup></span> properties</li>
+<li><span class="math">150</span> edge types</li>
+<li><span class="math">40</span> node types</li>
+</ul>
+<!-- * **`1,216,993,547`** relationships
+* `190,625,351` nodes
+* `584,436,429` properties
+* `144` relationship types
+* `42` node types
+ -->
+</section><section class="slide level2">
+
+<h3 id="bio4j-structure">Bio4j structure</h3>
+<p>Bio4j importing process is <strong>modular</strong> and <strong>customizable</strong> allowing you to import just the data you are interested in.</p>
+<!-- Just keep in mind that you must be **coherent**
+_e.g. you cannot import protein interactions if you didn't import any protein yet!_
+-->
+</section><section class="slide level2">
+
+<h3 id="bio4j-apis">Bio4j APIs</h3>
+<ol type="1">
+<li class="fragment">abstract <strong>domain model</strong></li>
+<li class="fragment"><strong>Blueprints</strong> implementation</li>
+<li class="fragment"><strong>technology-specific</strong> versions</li>
+</ol>
+</section><section class="slide level2">
+
+<h3 id="domain-model">domain model</h3>
+<p>Bio4j database has a <strong>well-defined</strong> domain model and all nodes and relationships comply with this abstract model</p>
+</section><section class="slide level2">
+
+<figure>
+<img src="resources/images/Bio4jDomainModelWithCardinality.jpg" />
+</figure>
+</section><section class="slide level2">
+
+<h3 id="domain-model-why">domain model <em>why?</em></h3>
+<ul>
+<li>abstract over Blueprints</li>
+<li>more precise <strong>typing</strong></li>
+<li>implementations can use technology-specific features</li>
+</ul>
+</section><section class="slide level2">
+
+<h3 id="key-advantage">Key advantage</h3>
+<p><em>Different</em> <strong>graph topologies</strong> at the storage level, <em>same</em> <strong>domain model</strong>.</p>
+<p>Example: use <strong>type nodes</strong> in <em>Titan</em>, <strong>labels</strong> in <em>Neo4j</em>.</p>
+</section><section class="slide level2">
+
+<h3 id="blueprints-layer">Blueprints layer</h3>
+<p>A default <strong><a href="https://github.com/tinkerpop/blueprints/">Blueprints</a></strong> implementation of the abstract model.</p>
+</section><section class="slide level2">
+
+<p>Apart from the set of interfaces developed as the <strong>first layer</strong> for the <em>domain model</em> there’s an <strong>extra layer</strong> that uses <em>Blueprints</em>. This way we’re going one step further for making the domain model <strong>independent</strong> from the choice of <em>database technology</em></p>
+</section><section class="slide level2">
+
+<h3 id="technology-specific">technology-specific</h3>
+<p>Optimizations, features, etc.</p>
+<ul>
+<li><strong><a href="https://github.com/neo4j/neo4j">Neo4j</a></strong></li>
+<li><strong><a href="https://github.com/thinkaurelius/titan/">Titan</a></strong> (WIP)</li>
+<li><strong><a href="https://github.com/orientechnologies/orientdb/">OrientDB</a></strong> (planned)</li>
+</ul>
+</section><section class="slide level2">
+
+<h3 id="why-neo4j">why Neo4j</h3>
+<ul>
+<li class="fragment">wide <strong>adoption</strong></li>
+<li class="fragment">stable</li>
+<li class="fragment"><strong>Cypher</strong></li>
+</ul>
+</section><section class="slide level2">
+
+<h3 id="why-titan">why Titan</h3>
+<ul>
+<li class="fragment"><strong>local!</strong> indexes</li>
+<li class="fragment"><strong>on-disk</strong> access</li>
+<li class="fragment"><strong>type</strong> definitions -&gt; <em>constraints!</em></li>
+</ul>
+</section><section class="slide level2">
+
+<h3 id="bio4j-and-the-cloud">Bio4j and the cloud</h3>
+<ul>
+<li><strong>Interoperability</strong> and data distribution</li>
+<li><strong>Backup</strong> and <strong>storage</strong></li>
+<li><strong>Scalability</strong></li>
+<li>Applications and service providers on the cloud</li>
+<li>Cost-effective</li>
+</ul>
+</section><section class="slide level2">
+
+<h3 id="dev-and-release-process">dev and release process</h3>
+<ul>
+<li>coordinate <strong>data</strong> and <strong>code</strong></li>
+<li><strong><a href="http://semver.org/spec/v2.0.0.html">Semantic Versioning</a></strong></li>
+<li><strong>Cloud</strong> integration, distribution, deployment, …</li>
+</ul>
+</section><section class="slide level2">
+
+<h3 id="how">how?</h3>
+<ul>
+<li><strong><a href="http://ohnosequences/statika">Statika</a></strong> cloud, data + code, modules (see <a href="https://fosdem.org/2014/schedule/event/graphdevroom_bio4j_1/">next talk</a>)</li>
+<li><strong><a href="https://github.com/sbt/sbt">sbt</a></strong> build Java + Scala, automated Bio4j-specific test &amp; release</li>
+<li><strong><a href="https://github.com/bio4j">git + github</a></strong> versioning, docs, collaboration, coordination</li>
+</ul>
+</section><section class="slide level2">
+
+<p><br/> <br/></p>
+<!-- How Bio4j -->
+<h3 id="how-to-use-bio4j"><em>how</em> to use Bio4j?</h3>
+<p>use cases, case studies, community</p>
+</section><section class="slide level2">
+
+<h3 id="use-cases">use cases</h3>
+</section><section id="section" class="slide level2">
+<h1><!--
+----
+
+### ??? and !!!
+
+I don't get what's this... :|
+--></h1>
+<h3 id="how-we-use-it">how we use it</h3>
+<ul>
+<li><strong><a href="http://bg7.ohnosequences.com">bg7</a></strong> genome annotation</li>
+<li><strong>mg7</strong> metagenomics analysis</li>
+<li>comparative genomics, network analysis, genome assembly, …</li>
+</ul>
+</section><section class="slide level2">
+
+<h3 id="case-study-ii">case study II</h3>
+<p><strong>Ohio State University</strong></p>
+<ul>
+<li><strong>Integration</strong> and <strong>analysis</strong> of Chip-seq data</li>
+<li><strong>Modeling</strong> genomic information and <strong>gene regulatory networks</strong></li>
+</ul>
+</section><section class="slide level2">
+
+<h3 id="case-study-iii">case study III</h3>
+<p><strong>Berkeley Phylogenomics Group</strong></p>
+<ul>
+<li>Graph database for <em>Big Data challenges</em> in <strong>genomics</strong> developed <strong>on top of Bio4j</strong></li>
+</ul>
+</section><section class="slide level2">
+
+<h3 id="community">community</h3>
+<ul>
+<li><strong><a href="http://twitter.com/bio4j">@bio4j</a></strong> twitter</li>
+<li><strong><a href="https://github.com/bio4j">bio4j</a></strong> github org</li>
+<li><strong><a href="http://groups.google.com/group/bio4j-user">bio4j-user</a></strong> google group</li>
+<li><strong><a href="http://www.linkedin.com/groups/Bio4j-3890937">bio4j</a></strong> linkedin</li>
+</ul>
+</section><section class="slide level2">
+
+<p><br/> <br/></p>
+<!-- How Bio4j -->
+<h3 id="whos-doing-bio4j"><em>who</em>’s doing Bio4j?</h3>
+<p>research group, team</p>
+</section><section class="slide level2">
+
+<h3 id="oh-no-sequences">oh no sequences!</h3>
+<p><strong><a href="http://era7bioinformatics.com">Era7 bioinformatics</a></strong> R&amp;D group</p>
+<ul>
+<li><strong>web</strong> -&gt; <a href="http://ohnosequences.com">ohnosequences.com</a></li>
+<li><strong>Github</strong> -&gt; <a href="https://github.com/ohnosequences">ohnosequences</a></li>
+</ul>
+</section><section class="slide level2">
+
+<h3 id="team">team</h3>
+<ul>
+<li><strong><a href="http://ohnosequences.com/ppareja">Pablo Pareja</a></strong> <br /> project leader &amp; main dev</li>
+<li><strong><a href="http://ohnosequences.com/eparejatobes">Eduardo Pareja-Tobes</a></strong><br /> technology &amp; architecture</li>
+<li><strong><a href="http://ohnosequences.com/rtobes">Raquel Tobes</a></strong> <br /> bio data integration</li>
+</ul>
+</section><section class="slide level2">
+
+<h3 id="team-1">team</h3>
+<ul>
+<li><strong><a href="http://ohnosequences.com/aalekhin">Alexey Alekhin</a></strong> <br /> Statika, release process, dev</li>
+<li><strong><a href="http://ohnosequences.com/mmanrique">Marina Manrique</a></strong> <br /> bio data integration</li>
+<li><strong><a href="http://ohnosequences.com/ekovach">Evdokim Kovach</a></strong><br /> dev</li>
+</ul>
+</section><section class="slide level2">
+
+</section></section>
 
 </div>
 
@@ -75,7 +371,7 @@
     center: true,
 
   // available themes are in /resources/reveal.js/css/theme
-      theme: Reveal.getQueryHash().theme || 'sky', 
+      theme: Reveal.getQueryHash().theme || 'serif', 
   
   // default/cube/page/concave/zoom/linear/fade/none
       transition: Reveal.getQueryHash().transition || 'linear',
