Moar logos! some other improvements

--- a/bio4j/slides/slides.html
+++ b/bio4j/slides/slides.html
@@ -93,7 +93,18 @@
 
 </section><section class="slide level2">
 
-<h3 id="its-open">It’s open!</h3>
+<!-- 
++----------------------------------------------------------------+--------------------------------------------------------------------------------------+
+|                                                                |                                                                                      |
++================================================================+======================================================================================+
+|                                                                | - Code is under the [**AGPLv3**](https://www.gnu.org/licenses/agpl-3.0.html) license |
+| <img width="300" src="resources/logos/open-science-logo.jpg"/> | - Only [**Open Data**](http://okfn.org/opendata/) is integrated                      |
+|                                                                | - Implementation & release process is                                                |
+|                                                                | [**100% public**](https://github.com/bio4j/bio4j) and totally **transparent**        |
++----------------------------------------------------------------+--------------------------------------------------------------------------------------+
+-->
+
+<p><a href="https://www.flickr.com/photos/gemmerich/6365692623/in/faves-67338640@N04/"><img width="300" src="resources/logos/open-science-logo.jpg"/></a></p>
 <ul>
 <li>Code is under the <a href="https://www.gnu.org/licenses/agpl-3.0.html"><strong>AGPLv3</strong></a> license</li>
 <li>Only <a href="http://okfn.org/opendata/"><strong>Open Data</strong></a> is integrated</li>
@@ -224,9 +235,11 @@ _e.g. you cannot import protein interactions if you didn't import any protein ye
 -->
 
 <h3 id="bio4j-and-the-cloud">Bio4j and the cloud</h3>
+<p><img width="200" style="background:trasparent; border:none; box-shadow:none;" src="resources/logos/aws-logo.png"/></p>
 <h4 id="data-as-a-service">Data as a service</h4>
 <ul>
-<li>Interoperability and data distribution</li>
+<li>Interoperability</li>
+<li>Data distribution</li>
 <li>Backup and storage</li>
 <li>Scalability</li>
 <li>Cost-effectiveness</li>
@@ -260,15 +273,10 @@ _e.g. you cannot import protein interactions if you didn't import any protein ye
 
 <h3 id="how-we-develop-bio4j">How we develop Bio4j?</h3>
 <ul>
-<li><strong><a href="http://ohnosequences/statika">Statika</a></strong> cloud, data + code, modules (see <a href="https://fosdem.org/2014/schedule/event/graphdevroom_bio4j_1/">next talk</a>)</li>
-<li><strong><a href="https://github.com/sbt/sbt">sbt</a></strong> build Java + Scala, automated Bio4j-specific test &amp; release</li>
-<li><strong><a href="https://github.com/bio4j">git + github</a></strong> versioning, docs, collaboration, coordination</li>
-</ul>
-<h3 id="dev-and-release-process">dev and release process</h3>
-<ul>
-<li>coordinate <strong>data</strong> and <strong>code</strong></li>
-<li><strong><a href="http://semver.org/spec/v2.0.0.html">Semantic Versioning</a></strong></li>
-<li><strong>Cloud</strong> integration, distribution, deployment, …</li>
+<li>Java + Scala source code</li>
+<li><strong><a href="http://ohnosequences/statika">Statika</a></strong>-based module system</li>
+<li><strong><a href="https://github.com/sbt/sbt">SBT</a></strong> for building sources<br /> and automated tests &amp; release</li>
+<li><strong><a href="https://github.com/bio4j">Git + Github</a></strong>: versioning, docs,<br /> collaboration, coordination</li>
 </ul>
 </section><section class="slide level2">
 
