Improved the domain model picture. Thanks to @rtobes

--- a/bio4j/slides/slides.html
+++ b/bio4j/slides/slides.html
@@ -190,7 +190,7 @@
 
 <h3 id="bio4j-structure">Bio4j structure</h3>
 <p>Bio4j importing process is <strong>modular</strong> and <strong>customizable</strong> allowing you to import just the data you are interested in</p>
-<p><img width="85%" src="resources/images/bio4j-modules.png"/></p>
+<p><a href="resources/images/bio4j-modules.png"><img width="85%" src="resources/images/bio4j-modules.png"/></a></p>
 <!-- Just keep in mind that you must be **coherent**
 _e.g. you cannot import protein interactions if you didn't import any protein yet!_ -->
 
@@ -216,7 +216,7 @@ _e.g. you cannot import protein interactions if you didn't import any protein ye
 
 <h3 id="domain-model">Domain model</h3>
 <p>Bio4j database has a <strong>well-defined</strong> domain model and all nodes and relationships comply with this abstract model</p>
-<p><img width="100%" src="resources/images/domain-model.jpg"/></p>
+<p><a href="resources/images/domain-model.png"><img width="100%" src="resources/images/domain-model.png"/></a></p>
 </section><section class="slide level2">
 
 <!-- Not sure if I should talk about this: (may be too technical and I don't know much) -->
