--- a/bio4j/slides/slides.html
+++ b/bio4j/slides/slides.html
@@ -47,7 +47,7 @@
 <h4>Pablo Pareja-Tobes, Alexey Alekhin, Evdokim Kovach, Marina Manrique, Eduardo Pareja, Raquel Tobes and Eduardo Pareja-Tobes</h4>
 <p>
 <h4>08.04.2014</h4>
-</p><br/>
+</p>
 <img width="190" style="background:trasparent; border:none; box-shadow:none; margin:10px;" src="resources/logos/bio4j-logo.png">
 <br/>
 <img width="190" style="background:trasparent; border:none; box-shadow:none; margin:0px;" src="resources/logos/ohnoseq-logo.png">
@@ -104,11 +104,12 @@
 +----------------------------------------------------------------+--------------------------------------------------------------------------------------+
 -->
 
-<p><a href="https://www.flickr.com/photos/gemmerich/6365692623/in/faves-67338640@N04/"><img width="300" src="resources/logos/open-science-logo.jpg"/></a></p>
+<h3 id="its-open">It’s open!</h3>
+<p><a href="https://www.flickr.com/photos/gemmerich/6365692623/in/faves-67338640@N04/"><img width="50%" src="resources/logos/open-science-logo.jpg"/></a></p>
 <ul>
 <li>Code is under the <a href="https://www.gnu.org/licenses/agpl-3.0.html"><strong>AGPLv3</strong></a> license</li>
 <li>Only <a href="http://okfn.org/opendata/"><strong>Open Data</strong></a> is integrated</li>
-<li>Implementation &amp; release process is<br /> <a href="https://github.com/bio4j/bio4j"><strong>100% public</strong></a> and totally <strong>transparent</strong></li>
+<li>Implementation &amp; release process is<br /> <a href="https://github.com/bio4j/bio4j"><strong>100% public</strong></a> and totally transparent</li>
 </ul>
 </section><section class="slide level2">
 
@@ -116,7 +117,7 @@
 <ul>
 <li>Highly <strong>interconnected overlapping</strong> knowledge</li>
 <li>spread over <strong>different data sources</strong></li>
-<li>mantained in the <strong>Relational Databases</strong><br /> or sometimes even just as plain <strong>CSV files</strong></li>
+<li>maintained in the <strong>Relational Databases</strong><br /> or sometimes even just as plain <strong>CSV files</strong></li>
 </ul>
 <p> </p>
 <p>That might be fine for simple scenarios<br />but as the <strong>amount</strong> and <strong>diversity</strong> of data grows,<br /><strong>domain models</strong> become <em>crazily complicated!</em></p>
@@ -153,8 +154,24 @@
 </ul>
 </section><section class="slide level2">
 
-<h3 id="why-bio4j">Why Bio4j?</h3>
-<p>Bio Data <strong>+</strong> Graph Databases <strong>+</strong> The Cloud</p>
+<h3 id="why-in-the-cloud">Why in the cloud?</h3>
+<p><img width="250" style="background:trasparent; border:none; box-shadow:none;" src="resources/logos/aws-logo.png"/></p>
+<h4 id="data-as-a-service">Data as a service</h4>
+<ul>
+<li>Services interoperability</li>
+<li>Data distribution</li>
+<li>Backup and storage</li>
+<li>Scalability</li>
+<li>Cost-effectiveness</li>
+</ul>
+</section><section id="bio4j" class="slide level2">
+<h1>Bio4j</h1>
+<h3 id="section"><strong>=</strong></h3>
+<h3 id="bio-data">Bio Data</h3>
+<h3 id="section-1"><strong>+</strong></h3>
+<h3 id="graph-databases">Graph Databases</h3>
+<h3 id="section-2"><strong>+</strong></h3>
+<h3 id="the-cloud">The Cloud</h3>
 </section></section>
 <section><section id="details-about-bio4j" class="titleslide slide level1"><h1>Details about Bio4j</h1></section><section class="slide level2">
 
@@ -165,42 +182,20 @@
 <li><a href="http://bg7.ohnosequences.com/"><strong>BG7</strong></a> bacterial genome annotation system</li>
 <li>Need for massive direct access to <strong>protein information</strong></li>
 </ul>
-</section><section class="slide level2">
-
+<p> </p>
 <h3 id="more-and-more-data">More and more data!</h3>
 <ul>
-<li>As <em>other</em> data sources were becoming a <em>bottleneck</em> they were being added to Bio4j</li>
-<li>First it was Uniprot KB, then Uniref and <strong>we didn’t stop yet</strong></li>
+<li>As <em>other</em> data sources were becoming a <em>bottleneck</em> they were integrated into Bio4j</li>
+<li>First it was Uniprot KB, then Uniref, …</li>
+<li>And <strong>we didn’t stop yet!</strong></li>
 </ul>
-<p> </p>
-<p>Some numbers:</p>
-<ul>
-<li><span class="math">10<sup>9</sup></span> edges of <span class="math">150</span> types</li>
-<li><span class="math">2 × 10<sup>8</sup></span> nodes of <span class="math">40</span> types</li>
-<li><span class="math">6 × 10<sup>8</sup></span> properties</li>
-</ul>
-<!-- * **`1,216,993,547`** relationships
-* `190,625,351` nodes
-* `584,436,429` properties
-* `144` relationship types
-* `42` node types
--->
-
-</section><section class="slide level2">
-
-<h3 id="bio4j-structure">Bio4j structure</h3>
-<p>Bio4j importing process is <strong>modular</strong> and <strong>customizable</strong> allowing you to import just the data you are interested in</p>
-<p><a href="resources/images/bio4j-modules.png"><img width="85%" src="resources/images/bio4j-modules.png"/></a></p>
-<!-- Just keep in mind that you must be **coherent**
-_e.g. you cannot import protein interactions if you didn't import any protein yet!_ -->
-
 </section><section class="slide level2">
 
 <h3 id="different-layers-of-bio4j">Different layers of Bio4j</h3>
 <ol type="1">
 <li>Abstract <strong>domain model</strong> with precise typing</li>
 <li>Universal <strong><a href="https://github.com/tinkerpop/blueprints/">Blueprints</a></strong> implementation</li>
-<li><strong>Technology-specific</strong> versions (optimizations, features):
+<li><strong>Technology-specific</strong> versions:
 <ul>
 <li><strong><a href="https://github.com/neo4j/neo4j">Neo4j</a></strong></li>
 <li><strong><a href="https://github.com/thinkaurelius/titan/">Titan</a></strong> (WIP)</li>
@@ -214,10 +209,34 @@ _e.g. you cannot import protein interactions if you didn't import any protein ye
 
 </section><section class="slide level2">
 
-<h3 id="domain-model">Domain model</h3>
-<p>Bio4j database has a <strong>well-defined</strong> domain model and all nodes and relationships comply with this abstract model</p>
+<h3 id="bio4j-domain-model">Bio4j domain model</h3>
+<!-- Bio4j database has a **well-defined** domain model and all nodes and relationships comply with this abstract model -->
+
+<ul>
+<li><span class="math">10<sup>9</sup></span> edges of <strong><span class="math">150</span> types</strong></li>
+<li><span class="math">2 × 10<sup>8</sup></span> nodes of <strong><span class="math">40</span> types</strong></li>
+<li><span class="math">6 × 10<sup>8</sup></span> properties</li>
+</ul>
 <p><a href="resources/images/domain-model.png"><img width="100%" src="resources/images/domain-model.png"/></a></p>
+<!-- * **`1,216,993,547`** relationships
+* `190,625,351` nodes
+* `584,436,429` properties
+* `144` relationship types
+* `42` node types
+-->
+
 </section><section class="slide level2">
+
+<h3 id="bio4j-structure">Bio4j structure</h3>
+<p>The importing process is <strong>modular</strong> and <strong>customizable</strong><br />allowing you to import just the data you are interested in</p>
+<p><a href="resources/images/domain-model-modules.png"><img width="100%" src="resources/images/domain-model-modules.png"/></a></p>
+</section><section class="slide level2">
+
+<h3 id="bio4j-module-system">Bio4j module system</h3>
+<p><a href="http://ohnosequences.com/statika">Statika</a> helps to manage dependencies between modules and simplifies import and deployment in the cloud</p>
+<p><a href="resources/images/bio4j-modules.png"><img width="90%" src="resources/images/bio4j-modules.png"/></a></p>
+<!-- Just keep in mind that you must be **coherent**
+_e.g. you cannot import protein interactions if you didn't import any protein yet!_ -->
 
 <!-- Not sure if I should talk about this: (may be too technical and I don't know much) -->
 <!-- 
@@ -234,44 +253,36 @@ _e.g. you cannot import protein interactions if you didn't import any protein ye
 * **Type** definitions $\rightarrow$ _constraints!_
 -->
 
-<h3 id="bio4j-and-the-cloud">Bio4j and the cloud</h3>
-<p><img width="200" style="background:trasparent; border:none; box-shadow:none;" src="resources/logos/aws-logo.png"/></p>
-<h4 id="data-as-a-service">Data as a service</h4>
-<ul>
-<li>Interoperability</li>
-<li>Data distribution</li>
-<li>Backup and storage</li>
-<li>Scalability</li>
-<li>Cost-effectiveness</li>
-</ul>
+
+
 </section></section>
 <section><section id="under-the-hood" class="titleslide slide level1"><h1>Under the hood</h1></section><section class="slide level2">
 
 <h3 id="how-we-use-bio4j-in-era7">How we use Bio4j in Era7</h3>
 <ul>
-<li><strong><a href="http://bg7.ohnosequences.com">BG7</a></strong> genome annotation</li>
+<li><strong>BG7</strong> genome annotation</li>
 <li><strong>MG7</strong> metagenomics analysis</li>
-<li>Comparative genomics, network analysis, genome assembly, …</li>
+<li>Comparative genomics, network analysis,<br /> genome assembly, …</li>
 </ul>
-<!-- What is comparative genomics? -->
-
-<!-- Don't know anything about this: -->
-<!-- 
-### Use cases
-
-**Ohio State University**
-
-* **Integration** and **analysis** of Chip-seq data
-* **Modeling** genomic information and **gene regulatory networks**
-
-**Berkeley Phylogenomics Group**
-
-* Graph database for _Big Data challenges_ in **genomics** developed **on top of Bio4j**
--->
-
 </section><section class="slide level2">
 
-<h3 id="how-we-develop-bio4j">How we develop Bio4j?</h3>
+<!-- Don't know anything about this: -->
+ 
+<h3 id="how-others-use-bio4j">How others use Bio4j</h3>
+<p> </p>
+<h4 id="ohio-state-university">Ohio State University</h4>
+<ul>
+<li><strong>Integration</strong> and <strong>analysis</strong> of Chip-seq data</li>
+<li><strong>Modeling</strong> genomic information and <strong>gene regulatory networks</strong></li>
+</ul>
+<p> </p>
+<h4 id="berkeley-phylogenomics-group">Berkeley Phylogenomics Group</h4>
+<ul>
+<li>Graph database for <em>Big Data challenges</em> in <strong>genomics</strong> developed <strong>on top of Bio4j</strong></li>
+</ul>
+</section><section class="slide level2">
+
+<h3 id="how-we-develop-bio4j">How we develop Bio4j</h3>
 <ul>
 <li>Java + Scala source code</li>
 <li><strong><a href="http://ohnosequences/statika">Statika</a></strong>-based module system</li>
@@ -280,38 +291,32 @@ _e.g. you cannot import protein interactions if you didn't import any protein ye
 </ul>
 </section><section class="slide level2">
 
-<h3 id="whos-doing-bio4j">Who’s doing Bio4j?</h3>
+<h3 id="whos-doing-bio4j">Who’s doing Bio4j</h3>
 <p><a href="http://ohnosequences.com">Ohnosequences!</a><br /><a href="http://era7bioinformatics.com">Era7 bioinformatics</a> R&amp;D group</p>
 <table>
 <tbody>
 <tr class="odd">
 <td style="text-align: right;"><a href="http://ohnosequences.com/ppareja"><strong>Pablo Pareja</strong></a></td>
-<td style="text-align: center;">—</td>
 <td style="text-align: left;">project leader &amp; main developer</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;"><a href="http://ohnosequences.com/eparejatobes"><strong>Eduardo Pareja-Tobes</strong></a></td>
-<td style="text-align: center;">—</td>
 <td style="text-align: left;">technology &amp; architecture</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;"><a href="http://ohnosequences.com/rtobes"><strong>Raquel Tobes</strong></a></td>
-<td style="text-align: center;">—</td>
 <td style="text-align: left;">bio data integration</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;"><a href="http://ohnosequences.com/mmanrique"><strong>Marina Manrique</strong></a></td>
-<td style="text-align: center;">—</td>
 <td style="text-align: left;">bio data integration</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;"><a href="http://ohnosequences.com/aalekhin"><strong>Alexey Alekhin</strong></a></td>
-<td style="text-align: center;">—</td>
 <td style="text-align: left;">module system developer</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;"><a href="http://ohnosequences.com/ekovach"><strong>Evdokim Kovach</strong></a></td>
-<td style="text-align: center;">—</td>
 <td style="text-align: left;">developer</td>
 </tr>
 </tbody>
@@ -321,15 +326,17 @@ _e.g. you cannot import protein interactions if you didn't import any protein ye
 <h3 id="contacts">Contacts</h3>
 <ul>
 <li><a href="http://twitter.com/bio4j">@bio4j</a> <strong>Twitter</strong> for news</li>
-<li><a href="https://github.com/bio4j">bio4j</a> <strong>Github</strong> org for the developement process</li>
+<li><a href="https://github.com/bio4j">bio4j</a> <strong>Github</strong> org for the development process</li>
 <li><a href="http://groups.google.com/group/bio4j-user">bio4j-user</a> <strong>Google group</strong> for the user feedback</li>
-<li><a href="http://www.linkedin.com/groups/Bio4j-3890937">bio4j</a> <strong>Linkedin</strong></li>
+<li><a href="http://www.linkedin.com/groups/Bio4j-3890937">bio4j</a> <strong>Linkedin</strong> <!-- what is linkedin group for? --></li>
 </ul>
-<!-- what is linkedin group for? -->
-
+<p><br/></p>
+<h3 id="bio4j.com"><strong><a href="http://bio4j.com">bio4j.com</a></strong></h3>
 </section><section class="slide level2">
 
 <h3 id="thank-you-for-attention">Thank you for attention!</h3>
+<p><br/><br/><br/></p>
+<p><span style="font-size:0.8em"><em>The source and the latest version of these slides can be found at</em><br /><a href="https://github.com/ohnosequences/IWBBIO-2014"><strong><code>github.com/ohnosequences/IWBBIO-2014</code></strong></a></span></p>
 </section></section>
 
 </div>
